# pi-nes

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  README.md  TODO_INVENTORY.md  package.json  spec.md
.research/: nes-audio-backend.md  nes-performance.md
extensions/nes/: config.ts  index.ts  input-map.ts  nes-component.ts  nes-core.ts  nes-session.ts  package.json  paths.ts  renderer.ts  rom-selector.ts  roms.ts  saves.ts
extensions/nes/native/kitty-shm/: Cargo.toml  index.d.ts  index.js  package.json
extensions/nes/native/kitty-shm/src/: lib.rs
extensions/nes/native/nes-core/: Cargo.toml  index.d.ts  index.js  package.json
extensions/nes/native/nes-core/src/: audio_cpal.rs  lib.rs
extensions/nes/types/: jsnes.d.ts  speaker.d.ts
scripts/: update-vendor-nes-rust.sh
tests/: README.md  config.test.ts  core-smoke.test.ts  debug-game.ts  game-scripts.ts  input-map.test.ts  paths.test.ts  regression.test.ts  roms.test.ts  saves.test.ts
