[package]
name = "pi_nes_core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
nes_rust = { path = "vendor/nes_rust" }
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"
cpal = { version = "0.17.1", optional = true }
ringbuf = { version = "0.4.8", optional = true }

[features]
audio-cpal = ["cpal", "ringbuf"]

[build-dependencies]
napi-build = "2"
